# cloud_integration_lab2

./: .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml
env/: pyproject.toml
fastapi_env/: pyproject.toml
