[tool.poetry]
name = "env"
version = "0.1.0"
description = ""
authors = ["imbadr <tadjer.badr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.86.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
sqlalchemy = "^1.4.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
