[tool.poetry]
name = "fastapi-env"
version = "0.1.0"
description = ""
authors = ["imbadr <tadjer.badr@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_env"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.86.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
